--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,7 @@
   --color-text-dark: #134178;
   --color-white: #fff;
   --color-background: #f6f6f6;
-  --color-background-dark: #0B284B;
+  --color-background-dark: #0b284b;
   /* Отступы */
   --spacing-xs: 4px;
   --spacing-sm: 8px;
@@ -27,19 +27,19 @@
   --spacing-3xl: 44px;
   --spacing-4xl: 60px;
 
-/*Закругления*/
---border-radius-sm: 8px;
---border-radius-md: 24px;
---border-radius-lg: 50px;
+  /*Закругления*/
+  --border-radius-sm: 8px;
+  --border-radius-md: 24px;
+  --border-radius-lg: 50px;
 
-/*Высота линии*/
---line-height-sm: 16px;
---line-height-base: 24px;
---line-height-lg: 23px;
---line-height-xl: 28px;
---line-height-2xl: 40px;
---line-height-3xl: 48px;
---line-height-4xl: 64px;
+  /*Высота линии*/
+  --line-height-sm: 16px;
+  --line-height-base: 24px;
+  --line-height-lg: 23px;
+  --line-height-xl: 28px;
+  --line-height-2xl: 40px;
+  --line-height-3xl: 48px;
+  --line-height-4xl: 64px;
 }
 
 * {
@@ -101,10 +101,9 @@ a {
   border: 1px solid var(--color-primary);
   color: var(--color-white);
 }
-.button--secondary{
+.button--secondary {
   border-color: var(--color-primary);
 }
-
 
 /*header*/
 
@@ -142,8 +141,8 @@ header {
   flex-basis: 25%;
 }
 
-.telegram-button{
-  margin-left: auto;  /*прижали в право*/
+.telegram-button {
+  margin-left: auto; /*прижали в право*/
 }
 
 .menu-button {
@@ -210,27 +209,27 @@ header {
 
 /*Footer*/
 
-.footer{
+.footer {
   background-color: var(--color-background-dark);
   color: var(--color-white);
 }
 
-.footer-content{
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: var(--spacing-xl) var(--spacing-base);
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--spacing-xl) var(--spacing-base);
 }
 
-.footer-content ul{
+.footer-content ul {
   display: flex;
   align-items: center;
   gap: var(--spacing-base);
   margin: 0;
 }
 
-@media (max-width: 670px){
-  .footer-content{
+@media (max-width: 670px) {
+  .footer-content {
     padding: var(--spacing-lg) var(--spacing-base);
   }
 }
